--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+  font-family: 'obviously';
+  src: url("/fonts/Obviously/Obviously-light.otf") format("opentype");
+  font-weight: 300;
+  /* font-style: normal; */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+  font-family: 'obviously';
+  src: url("/fonts/Obviously/Obviously-Regular.otf") format("opentype");
+  font-weight: 400;
+  /* font-style: normal; */
 }
+
+
+
+
+
+:root {
+  --background: #B564F7;
+  --foreground: #171717;
+}
+
+
+
+
+
+
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background);
+  color: var(--foreground);
+  font-family: 'obviously' sans-serif;
+}
+
+h1, h2  {
+  font-family: 'obviously';
+  font-weight: 400;
+}
+
+li,
+p,
+a,
+label{
+  font-family: 'obviously';
+  font-weight: 400;
+}
+
+span{
+    font-family: 'obviously';
+  font-weight: 300;
 }
